# data_pipeline_project

./: .env  README.txt  call_api.py  db_connect.py  main.py  pagination_state.json  practice.py  practice_call_api.py  pyproject.toml  reference.py
archived/: call_one_job.py
dbt/data_pipeline_project/: dbt_project.yml
dbt/data_pipeline_project/models/: sources.yml
dbt/jobs_analytics/: dbt_project.yml
dbt/jobs_analytics/models/prod/: prod_jobs.sql
dbt/jobs_analytics/models/staging/: schema.yml  stage_jobs.sql
practice_what_I_learned/: db_connect.py  practice_call_api.py  practice_db.py
scripts/: call_api.py  pagination_state.json  test_connection.py  transform_schemas.py
