[project]
name = "data-pipeline-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.2.9",
    "requests>=2.32.4",
]
